--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: mskelton/setup-yarn@v1
         with:
           node-version: '10.x'
-      - run: yarn install 
+      - run: yarn
       - name: Deploy Theme
         run: yarn zip 
         env:
